-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11, 13
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8225905 | 14 | Patric Hedlin | P2 | Resolved | Fixed | team |
| JDK-8282167 | 11.0.16-oracle | Joakim Nordström | P2 | Closed | Fixed | b01 |
| JDK-8283046 | 11.0.16 | Martin Doerr | P2 | Resolved | Fixed | b01 |
multiple platforms:
[stress.process.out] # assert(delta <= 2 * required) failed: Bad node estimate (actual: 734, request: 353)
Current thread (0x00007f34d0440800): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=3259, stack(0x00007f348b5fe000,0x00007f348b6ff000)]
Current CompileTask:
C2:1900484 81164 b die.verwandlung.xmlspec::applyTemplates (2549 bytes)
Stack: [0x00007f348b5fe000,0x00007f348b6ff000], sp=0x00007f348b6f92d0, free space=1004k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1183b72] AutoNodeBudget::~AutoNodeBudget()+0x1c2
V [libjvm.so+0x1180a03] IdealLoopTree::iteration_split(PhaseIdealLoop*, Node_List&)+0x1d3
V [libjvm.so+0x1180858] IdealLoopTree::iteration_split(PhaseIdealLoop*, Node_List&)+0x28
V [libjvm.so+0x1180858] IdealLoopTree::iteration_split(PhaseIdealLoop*, Node_List&)+0x28
V [libjvm.so+0x11a3ce0] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0xbd0
V [libjvm.so+0x99d782] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x242
V [libjvm.so+0x99a58f] Compile::Optimize()+0x3cf
V [libjvm.so+0x99c27a] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x103a
V [libjvm.so+0x7de8ad] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x10d
V [libjvm.so+0x9a8a7d] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x46d
V [libjvm.so+0x9a9a78] CompileBroker::compiler_thread_loop()+0x3b8
V [libjvm.so+0x168e03a] JavaThread::thread_main_inner()+0x26a
V [libjvm.so+0x1696677] JavaThread::run()+0x227
V [libjvm.so+0x16937a6] Thread::call_run()+0xf6
V [libjvm.so+0x13af01e] thread_native_entry(Thread*)+0x10e
- backported by
-
JDK-8225905 Bad node estimate assertion failure
-
- Resolved
-
-
JDK-8283046 Bad node estimate assertion failure
-
- Resolved
-
-
JDK-8282167 Bad node estimate assertion failure
-
- Closed
-
- relates to
-
JDK-8216137 assert(Compile::current()->live_nodes() < Compile::current()->max_node_limit()) failed: Live Node limit exceeded limit
-
- Resolved
-
-
JDK-8223502 Node estimate for loop unswitching is not correct: assert(delta <= 2 * required) failed: Bad node estimate
-
- Resolved
-
-
JDK-8223030 assert(Compile::current()->live_nodes() < Compile::current()->max_node_limit()) failed: Live Node limit exceeded limit
-
- Closed
-
-
JDK-8223911 Disable bad node budget verification until the fix
-
- Closed
-